--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -66,8 +66,8 @@
     <a href="{% url 'display:create_product' %}" style="text-align: center;">
         <button>Add A New Product Here!</button>
     </a>
-    <a href="{% url 'cart:create_product' %}" style="text-align: center;">
-        <button>Add A New Product Here!</button>
+    <a href="{% url 'cart:show_cart' %}" style="text-align: center;">
+        <button>My cart</button>
     </a>
 </body>
 {% endblock content %}
