--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-    <body class="flex min-h-screen">
-      {% block content %} {% endblock content %}
-    </body>
+  <body>
+    {% block content %} {% endblock content %}
+  </body>
 </html>
