--- a/promo/templates/main_promo.html
+++ b/promo/templates/main_promo.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<link href="https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap" rel="stylesheet">
 <div>
 	<button onclick="showModal()">
 		Add Promo
@@ -58,31 +59,46 @@ async function get_promo() {
 }
 
 async function refreshPromo() {
-	$("#promo_cards").html("");
-	const promos = await get_promo();
-	let htmlString = "";
-	if (promos.length === 0){
-		htmlString = `Belum ada promo`;
-	} else{
-		promos.forEach((promo) => {
-			htmlString += `
-			<a href="view_promo_admin/${promo.pk}" style="color:black">
-			<div style="background-color: blue; display: inline-flex">
-  <div style="display: flexbox;">
-    <div> <!--Header-->
-      ${promo.fields.nama}
-    </div>
-    <div style="display: inline-flex;"> <!--Header-->
-      <div style="margin-right: 2rem;">Ini untuk gambar</div>
-      <div>${promo.fields.potongan}</div>
-    </div>
-  </div>
-</div>
-</a>`
-		});
-	}
-	$("#promo_cards").html(htmlString);
+    $("#promo_cards").html("");
+    const promos = await get_promo();
+    let htmlString = "";
+    
+    if (promos.length === 0) {
+        htmlString = `Belum ada promo`;
+    } else {
+        promos.forEach((promo) => {
+            htmlString += `
+            <a href="view_promo_admin/${promo.pk}" style="color:black">
+                <div style="background-color: #FFF0F0; display: inline-flex; width: 30vw; height: 12vw; border-radius: 2vh; font-family: 'Mouse Memoirs';">
+                    <div style="flex: 3; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center; font-style: normal; font-weight: 400; line-height: normal; width: 100%; margin-bottom: 1vw;">
+                        <div style="font-size: 3vw; flex: 3; display: flex; justify-content: center; align-items: center; width: 100%; text-decoration: underline;">${promo.fields.nama}</div>
+                        <div style="font-size: 2vw; flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; margin-bottom: 0.5vw;">kode: ${promo.fields.kode}</div>
+                        <div style="font-size: 2vw; flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; margin-bottom: 0.5vw;">Valid hingga ${promo.fields.tanggal_akhir_berlaku}</div>
+                    </div>`;
+
+            const potonganValue = promo.fields.potongan / 1000;
+            let bgColor, fontSize = '4vw';
+
+            if (potonganValue <= 100) {
+                bgColor = "#4E9B00";
+            } else if (potonganValue <= 1000) {
+                bgColor = "#FF6E20"; 
+            } else {
+                bgColor = "#9812FF";
+            }
+
+            htmlString += `
+                    <div style="flex: 2; background-color: ${bgColor}; border-bottom-right-radius: 2vh; border-top-right-radius: 2vh; width: 100%; color: white; text-align: center; display: flex; flex-direction: column; justify-content: center; align-items: center; font-size: ${fontSize};">
+                        ${potonganValue.toFixed(0)}k
+                    </div>
+                </div>
+            </a>`;
+        });
+    }
+
+    $("#promo_cards").html(htmlString);
 }
+
 refreshPromo();
 
 function showModal() {
@@ -107,6 +123,7 @@ $('#formpromo').submit(function() {
 		})
 		return false;
 	})
+
 
 </script>
 
