CRUD AJAX Product (Search Applied)

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
         <div class="hidden md:flex gap-10 ml-auto">
             <a href="/" class="text-black text-lg hover:text-gray-700">Home</a>
             <a href="/" class="text-black text-lg hover:text-gray-700">About</a>
-            <a href="/" class="text-black text-lg hover:text-gray-700">Contact</a>
+            <a href="{% url 'display:search' %}" class="text-black text-lg hover:text-gray-700">Search</a>
             <h1 style="margin-top: 2px;" class="text-black text-l">Welcome!</h1>
             <a>
                 <button class="text-black text-sm border-radius[15px] py-2 px-4 bg-[rgb(215,215,215)] border-none cursor-pointer transition-transform duration-500 hover:opacity-75">
