--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-  <nav class="bg-[#bfa634] border-gray-200 fixed top-0 left-0 z-40 w-full">
-    <div class="flex items-center mx-auto max-w-screen-xl p-4">
+  <nav class="border-gray-200 fixed top-0 left-0 z-40 w-full shadow-xl" style="background: linear-gradient(95deg, #B5592A 18.6%, #C87145 56.11%, #B5592A 78.69%);">
+    <div class="flex items-center mx-auto max-w-screen-xl p-2">
       <div class="md:hidden flex items-center ml-auto">
         <button class="mobile-menu-button">
           <svg class="w-6 h-6 text-black" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
@@ -10,13 +11,20 @@
         </button>
       </div>
 
-      <div class="hidden md:flex gap-10 ml-auto">
-        <a href="/" class="text-black text-lg hover:text-gray-700">Home</a>
-        <a href="/" class="text-black text-lg hover:text-gray-700">About</a>
-        <a href="/" class="text-black text-lg hover:text-gray-700">Contact</a>
-        <a href="{% url 'cart:show_cart' %}" class="text-black text-lg hover:text-gray-700">Cart</a>
-        <h1 style="margin-top: 2px;" class="text-black text-l">Welcome!</h1>
-        <a><button class="text-black text-sm border-radius[15px] py-2 px-4 bg-[rgb(215,215,215)] border-none cursor-pointer transition-transform duration-500 hover:opacity-75">Logout</button></a>
+      <div class="hidden md:flex gap-10 ml-auto items-center justify-between w-full">
+        <div class="flex items-center">
+          <a href="{% url 'display:display_main' %}">
+            <img src="{% static 'image/logo.png' %}" class="w-20" alt="Image 2" />
+          </a>
+        </div>
+        <div class="flex gap-10 items-center">
+          <a href="/" class="text-white text-lg hover:text-cyan-200">Home</a>
+          <a href="/" class="text-white text-lg hover:text-cyan-200">About</a>
+          <a href="/" class="text-white text-lg hover:text-cyan-200">Contact</a>
+          <a href="{% url 'cart:show_cart' %}" class="text-white text-lg hover:text-cyan-200">Cart</a>
+          <h1 style="margin-top: 2px;" class="text-white text-l">Welcome!</h1>
+          <a><button class="text-black text-sm rounded-lg py-2 px-4 bg-[rgb(215,215,215)] border-none cursor-pointer transition-transform duration-500 hover:opacity-75">Logout</button></a>
+        </div>
       </div>
     </div>
 
