--- a/promo/templates/testcard.html
+++ b/promo/templates/testcard.html
@@ -10,3 +10,12 @@
     1000k
   </div>
 </div>
+
+<style>
+  @media (max-width: 600px) {
+    div {
+      font-size: 4vw; /* Adjust font size for smaller screens */
+      background-color: #FFF0F0; display: inline-flex; width: 30vw; height: 12vw; border-radius: 2vh; font-family: 'Mouse Memoirs';
+    }
+  }
+</style>
