--- a/display/templates/view_product.html
+++ b/display/templates/view_product.html
@@ -9,8 +9,8 @@
             <img src="{{ product.picture.url }}" alt="{{ product.name }}" style="width: 150px; height: 150px; object-fit: contain; border-radius: 8px; margin: 0 auto; margin-left: 20px;">
         </div>
         <h4 class="text-lg text-gray-700 mb-2">Price: <span class="font-semibold">${{ product.price }}</span></h4>
-        <h4 class="text-lg text-gray-700 mb-2">Location: <span class="font-semibold">{{ product.location }}</span></h4>
-        <h4 class="text-lg text-gray-700 mb-2">Shop: <span class="font-semibold">{{ product.shop }}</span></h4>
+        <!-- <h4 class="text-lg text-gray-700 mb-2">Location: <span class="font-semibold">{{ product.location }}</span></h4> -->
+        <h4 class="text-lg text-gray-700 mb-2">Category: <span class="font-semibold">{{ product.category }}</span></h4>
         <h4 class="text-lg text-gray-700 mb-2">Description:</h4>
         
         <pre class="bg-gray-100 p-4 rounded-md" style="white-space: pre-wrap; word-wrap: break-word;">{{ product.description }}</pre>
@@ -25,6 +25,6 @@
         
         <a href="{% url 'display:display_main' %}" class="mt-4 inline-block bg-gray-800 text-white font-semibold py-2 px-4 rounded hover:bg-gray-700">Back</a>
     </div>
-    <p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15778.545695716595!2d115.2110484!3d-8.6308584!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23f0cfe646759%3A0xa5fa73e7fb9caf23!2sRasa%20Bali%20Shop!5e0!3m2!1sen!2sid!4v1729739290519!5m2!1sen!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+    <p style="margin-right: 50px;"><iframe src="{{ product.location }}" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 </div>
 {% endblock %}
