--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-  <nav class="bg-[#bfa634] border-gray-200 fixed top-0 left-0 z-40 w-full">
+  <nav class="bg-[#f09027] border-gray-200 fixed top-0 left-0 z-40 w-full rounded-md">
     <div class="flex items-center mx-auto max-w-screen-xl p-4">
       <div class="md:hidden flex items-center ml-auto">
         <button class="mobile-menu-button">
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="mobile-menu hidden md:hidden bg-[#bfa634] text-black py-4 px-6">
+    <div class="mobile-menu hidden md:hidden bg-[#f09027] text-black py-4 px-6">
       <a href="/" class="block py-2 hover:text-gray-700">Home</a>
       <a href="/" class="block py-2 hover:text-gray-700">About</a>
       <a href="/" class="block py-2 hover:text-gray-700">Contact</a>
