--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="min-h-screen bg-cover" style="background-image: url('{% static 'image/landing_page_bg.png' %}');">
+  <div class="min-h-screen bg-cover" style="background-image: url('{% static 'image/login_bg.png' %}');">
     <header class="py-2 h-" style="background: linear-gradient(260deg, #C89A45 3.84%, #B5592A 60.95%, #B5592A 102.92%);
     box-shadow: 0px 6px 27px 0px rgba(0, 0, 0, 0.25);
     Linear Gradient">
