--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
   <head>
     {% block meta %}
       <meta charset="UTF-8" />
@@ -51,8 +51,8 @@
         font-family: 'Amatic SC', cursive;
       }
       
-      .font-main{
-        font-family: "Playwrite GB S", cursive;
+      .font-main {
+        font-family: 'Playwrite GB S', cursive;
         font-optical-sizing: auto;
         font-weight: 300;
         font-style: normal;
