--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<footer class=" text-gray-300" style="background: linear-gradient(249deg, #C89A45 0.67%, #B5592A 63.58%);">
+<footer class="w-full text-gray-300" style="background: linear-gradient(249deg, #C89A45 0.67%, #B5592A 63.58%);">
     <div class="max-w-7xl mx-auto px-4 py-12">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
         <div class="space-y-4">
@@ -52,7 +52,7 @@
             <input
               type="email"
               placeholder="Enter your email"
-              class="bg-[#B25626] text-white px-4 py-2 rounded flex-grow focus:outline-none focus:ring-2 focus:ring-cyan-500"
+              class="bg-[#B25626] text-white px-4 py-2 w-12 rounded flex-grow focus:outline-none focus:ring-2 focus:ring-cyan-500"
             />
             <button class="bg-[#67BAC6] text-white px-4 py-2 rounded hover:bg-[#a8e2eb] transition-colors">
               Subscribe
@@ -83,7 +83,7 @@
 
     <div class="bg-[#934921] py-4">
       <div class="max-w-7xl mx-auto px-4 text-center">
-        <p>&copy; Company Name. All rights reserved.</p>
+        <p>&copy; Sovita. Sendirian Berhad.</p>
       </div>
     </div>
   </footer>
