--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,6 +27,7 @@ Linear Gradient">
           <a href="/" class="text-white text-lg hover:text-cyan-200">About</a>
           <a href="{% url 'display:search' %}" class="text-white text-lg hover:text-cyan-200">Search</a>
           <a href="{% url 'cart:show_cart' %}" class="text-white text-lg hover:text-cyan-200">Cart</a>
+          <a href="{% url 'wishlist:show_wishlist' %}" class="text-white text-lg hover:text-cyan-200">Wishlist</a>
           <h1 style="margin-top: 2px;" class="text-white text-l">Welcome!</h1>
           <a href="{% url 'authentication:logout' %}"><button class="text-black text-sm rounded-lg py-2 px-4 bg-[rgb(215,215,215)] border-none cursor-pointer transition-transform duration-500 hover:opacity-75">Logout</button></a>
         </div>
