--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 {% block content %}
   <nav class="border-gray-200 fixed top-0 left-0 z-40 w-full shadow-xl" style="background: linear-gradient(260deg, #C89A45 3.84%, #B5592A 60.95%, #B5592A 102.92%);
 box-shadow: 0px 6px 27px 0px rgba(0, 0, 0, 0.25);
-Linear Gradient">
+Linear Gradient;">
     <div class="flex items-center mx-auto max-w-screen-xl p-2">
       <div class="md:hidden flex items-center justify-between ml-auto w-full">
         <div class="flex items-center">
@@ -34,7 +34,7 @@ Linear Gradient">
     </div>
 
     <div class="mobile-menu hidden md:hidden text-white py-4 px-6" style="background: linear-gradient(92deg, #8CBEAA 15.37%, #73D28C 79.06%);
-Linear Gradient 
+Linear Gradient; 
 ">
       <a href="/" class="block py-2 hover:text-gray-700">Home</a>
       <a href="/" class="block py-2 hover:text-gray-700">About</a>
@@ -43,8 +43,6 @@ Linear Gradient
       <h1 class="py-2 text-l">Welcome</h1>
       <a href="{% url 'authentication:logout' %}" class="block text-center bg-[#BA6B31] text-white font-bold py-2 rounded transition duration-300">Logout</a>
     </div>
-    
-
   </nav>
 
   <script>
