--- a/display/templates/search.html
+++ b/display/templates/search.html
@@ -21,7 +21,7 @@
             {% if products %}
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5 w-full max-w-7xl p-5 mt-24">
                     {% for product in products %}
-                        <div class="border border-gray-300 rounded-lg p-5 shadow-lg hover:scale-105 transition-transform duration-200 text-center flex flex-col justify-between">
+                        <div class="bg-white bg-opacity-50 border border-gray-300 rounded-lg sm:p-5 p-3 shadow-lg hover:scale-105 transition-transform duration-200 text-center flex flex-col justify-between">
                             <div>
                                 <img src="{{ product.picture.url }}" alt="{{ product.name }}" style="width: 150px; height: 150px; object-fit: contain; border-radius: 8px; margin: 0 auto;">
                                 <h5 class="product-name mb-2 font-semibold mt-4">{{ product.name }}</h5>
@@ -29,8 +29,6 @@
                             </div>
                             <div class="flex space-x-4 justify-center">
                                 <a href="{% url 'display:view_product' product.id %}" class="text-blue-500 hover:underline">View</a>
-                                <a href="{% url 'display:edit_product' product.id %}" class="text-blue-500 hover:underline">Edit</a>
-                                <a href="{% url 'display:delete_product' product.id %}" class="text-red-500 hover:underline">Delete</a>
                             </div>
                         </div>
                     {% endfor %}
